WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
86569
[V8] Fix a broken copyright of V8SVGElementCustom.cpp
https://bugs.webkit.org/show_bug.cgi?id=86569
Summary
[V8] Fix a broken copyright of V8SVGElementCustom.cpp
Kentaro Hara
Reported
2012-05-15 21:29:43 PDT
A copyright of V8SVGElementCustom.cpp is broken. We should fix it.
Attachments
Patch
(4.07 KB, patch)
2012-05-15 21:31 PDT
,
Kentaro Hara
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kentaro Hara
Comment 1
2012-05-15 21:31:55 PDT
Created
attachment 142142
[details]
Patch
WebKit Review Bot
Comment 2
2012-05-16 18:27:39 PDT
Comment on
attachment 142142
[details]
Patch Clearing flags on attachment: 142142 Committed
r117375
: <
http://trac.webkit.org/changeset/117375
>
WebKit Review Bot
Comment 3
2012-05-16 18:27:44 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug