[V8] Fix a broken copyright of V8SVGElementCustom.cpp https://bugs.webkit.org/show_bug.cgi?id=86569

Reviewed by Nate Chapin.

This patch just fixes a broken copyright of V8SVGElementCustom.cpp.

Blame changeset: r54153

No tests. No change in behavior.

* bindings/v8/custom/V8SVGElementCustom.cpp:


Canonical link: https://commits.webkit.org/104285@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@117375 268f45cc-cd09-0410-ab3c-d52691b4dbfc